[gd_scene load_steps=17 format=2]

[ext_resource path="res://Objects/Box.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/GiantCrab.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Spot.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://Assets/yoster-island.regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Atlases/atlas1.png" type="Texture" id=8]
[ext_resource path="res://ExitStairs.tscn" type="PackedScene" id=9]
[ext_resource path="res://Objects/ExitGate.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/EnterStairs.tscn" type="PackedScene" id=12]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=3]
0/name = "atlas1.png 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 799, 102, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "atlas1.png 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 289, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "atlas1.png 2"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 272, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "atlas1.png 3"
3/texture = ExtResource( 8 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 68, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "atlas1.png 4"
4/texture = ExtResource( 8 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 119, 51, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "atlas1.png 5"
5/texture = ExtResource( 8 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 21, 299, 20, 11 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
7/name = "atlas1.png 7"
7/texture = ExtResource( 8 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 187, 306, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 1 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "atlas1.png 8"
8/texture = ExtResource( 8 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 170, 289, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 2 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/yoster-island.regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = SubResource( 5 )

[node name="Level6" type="Node2D"]
scale = Vector2( 1.00276, 1.00413 )
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 160.698, 31.8684 )
z_index = 1
z_as_relative = false

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.3, 0.3 )
smoothing_enabled = true

[node name="Spots" type="Node" parent="."]

[node name="Spot" parent="Spots" instance=ExtResource( 4 )]
position = Vector2( 224, 143.16 )

[node name="Boxes" type="Node" parent="."]

[node name="Box1" parent="Boxes" instance=ExtResource( 1 )]
position = Vector2( 161.142, 48.2561 )

[node name="Teleports" type="Node" parent="."]

[node name="TileMap" type="TileMap" parent="."]
show_behind_parent = true
position = Vector2( 48.8651, 15.9342 )
z_index = -1
tile_set = SubResource( 3 )
cell_size = Vector2( 8, 8 )
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
format = 1
tile_data = PoolIntArray( 10, 8, 0, 12, 7, 0, 14, 8, 0, 16, 7, 0, 18, 8, 0, 20, 7, 0, 131082, 7, 0, 131084, 2, 0, 131086, 2, 0, 131088, 2, 0, 131090, 2, 0, 131092, 8, 0, 262154, 8, 0, 262156, 2, 0, 262158, 2, 0, 262160, 2, 0, 262162, 2, 0, 262164, 7, 0, 393224, 8, 0, 393226, 7, 0, 393228, 2, 0, 393230, 2, 0, 393232, 2, 0, 393234, 2, 0, 393236, 8, 0, 393238, 7, 0, 524296, 7, 0, 524298, 2, 0, 524300, 2, 0, 524302, 2, 0, 524304, 2, 0, 524306, 2, 0, 524308, 7, 0, 524310, 2, 0, 655368, 8, 0, 655370, 2, 0, 655372, 2, 0, 655374, 2, 0, 655376, 2, 0, 655378, 2, 0, 655380, 8, 0, 655382, 2, 0, 655384, 8, 0, 786440, 7, 0, 786442, 2, 0, 786444, 2, 0, 786446, 2, 0, 786448, 2, 0, 786450, 2, 0, 786452, 2, 0, 786454, 2, 0, 786456, 7, 0, 917512, 8, 0, 917514, 2, 0, 917516, 2, 0, 917518, 2, 0, 917520, 2, 0, 917522, 2, 0, 917524, 2, 0, 917526, 2, 0, 917528, 8, 0, 1048584, 7, 0, 1048586, 2, 0, 1048588, 2, 0, 1048590, 2, 0, 1048592, 2, 0, 1048594, 2, 0, 1048596, 2, 0, 1048598, 2, 0, 1048600, 7, 0, 1179656, 8, 0, 1179658, 7, 0, 1179660, 8, 0, 1179662, 7, 0, 1179664, 8, 0, 1179666, 7, 0, 1179668, 8, 0, 1179670, 7, 0, 1179672, 8, 0 )

[node name="ExitGate" parent="." instance=ExtResource( 10 )]
position = Vector2( 224.834, 95.6051 )
z_index = 2

[node name="EnterStairs" parent="." instance=ExtResource( 12 )]
position = Vector2( 151.582, 39.8684 )
scale = Vector2( 0.999327, 1.00226 )

[node name="ExitStairs" parent="." instance=ExtResource( 9 )]
position = Vector2( 240.834, 80 )
z_index = -1

[node name="Enemies" type="Node2D" parent="."]

[node name="GiantCrab2" parent="Enemies" groups=[
"enemies",
] instance=ExtResource( 2 )]
position = Vector2( 128.645, 79.671 )

[node name="GiantCrab" parent="Enemies" groups=[
"enemies",
] instance=ExtResource( 2 )]
position = Vector2( 192.469, 96.6051 )

[node name="UI" type="Node2D" parent="."]
z_index = 2

[node name="MovesLabel" type="Label" parent="UI"]
margin_top = 16.0
margin_right = 60.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "Moves: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="UI"]
anchor_top = -0.00311215
anchor_right = 0.3
anchor_bottom = 0.0718875
margin_right = 64.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 6 )
text = "Level 6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel" type="Label" parent="UI"]
anchor_top = -0.00311215
anchor_right = 0.3
anchor_bottom = 0.0718875
margin_left = 113.686
margin_top = 178.264
margin_right = 274.686
margin_bottom = 194.264
custom_fonts/font = SubResource( 6 )
text = "Beware the giant crab"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescriptionLabel2" type="Label" parent="UI"]
anchor_top = -0.00311215
anchor_right = 0.3
anchor_bottom = 0.0718875
margin_left = 196.458
margin_top = 199.177
margin_right = 401.458
margin_bottom = 215.177
custom_fonts/font = SubResource( 6 )
text = "Press the space  bar to wait"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinDialog" type="AcceptDialog" parent="UI"]
margin_left = 104.0
margin_top = 53.0
margin_right = 284.0
margin_bottom = 163.0
rect_clip_content = true
window_title = "Success"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UI/WinDialog"]
margin_left = 16.0
margin_top = 16.0
margin_right = 164.0
margin_bottom = 41.0
text = "You Win!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialogNext" type="AcceptDialog" parent="UI"]
margin_left = 88.0
margin_top = 64.0
margin_right = 268.0
margin_bottom = 174.0
rect_clip_content = true
window_title = "Success"
dialog_text = "Level cleared!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="confirmed" from="UI/WinDialog" to="." method="_on_WinDialog_confirmed"]
[connection signal="confirmed" from="UI/AcceptDialogNext" to="." method="_on_AcceptDialog_confirmed"]
